This file documents the revision history for Perl extension Mojolicious.

2.65    2012-03-21 00:00:00
        - Improved documentation.

2.64    2012-03-21 00:00:00
        - Deprecated Mojolicious::Routes->controller_base_class in favor of
          Mojolicious::Routes->base_classes.
        - Removed handle argument from io watchers in Mojo::Reactor.
        - Improved documentation.

2.63    2012-03-20 00:00:00
        - Renamed Mojo::IOWatcher to Mojo::Reactor.
        - Added Mojolicious::Routes::Route.
        - Added find and root methods to Mojolicious::Routes::Route.
        - Improved form_for helper to automatically add method="POST"
          attributes when necessary.
        - Improved memory usage of Mojolicious::Routes.
        - Improved Mojolicious::Renderer performance.
        - Improved documentation.
        - Improved tests.
        - Fixed bug that slowed down Mojolicious::Renderer.
        - Fixed small newline capture bug in Mojolicious::Routes::Match.

2.62    2012-03-17 00:00:00
        - Deprecated Mojolicious::Renderer->default_template_class in favor
          of Mojolicious::Renderer->classes.
        - Deprecated Mojolicious::Static->default_static_class in favor of
          Mojolicious::Static->classes.
        - Added options function to Mojolicious::Lite.
        - Added options method to Mojolicious::Routes.
        - Added options method to Mojo::UserAgent.
        - Added options_ok method to Test::Mojo.
        - Added o function to ojo.
        - Removed experimental status from Mojo::Cache.
        - Removed experimental status from Mojo::DOM::CSS.
        - Removed experimental status from Mojo::DOM::HTML.
        - Removed experimental status from Mojo::Server::Morbo.
        - Removed experimental status from Mojo::Transaction::WebSocket.
        - Removed experimental status from Mojo::UserAgent::Transactor.
        - Removed experimental status from Mojolicious::Command::cpanify.