@@ -2,6 +2,7 @@ This file documents the revision history for Perl extension Mojolicious.
 
 2.65    2012-03-21 00:00:00
         - Improved documentation.
+        - Improved tests.
 
 2.64    2012-03-21 00:00:00
         - Deprecated Mojolicious::Routes->controller_base_class in favor of
